Made changes to the SideBar/ added AboutMe.js

--- a/my-portfolio/src/app/globals.css
+++ b/my-portfolio/src/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 body {
   background: linear-gradient(
       to bottom,
@@ -38,4 +39,6 @@ a {
   }
 }
 
-
+.prose .callout > p {
+  margin: 0 !important;
+}
